# cpp-magic-ascii-art-creator-wasteful-bois

./: .gitignore  Ascii.h  CMakeLists.txt  Converter.cpp  Converter.h  Exceptions.h  ImageFactoryExceptions.h  ImageParser.cpp  ImageParser.h  ImageParserExceptions.h  ImageParserFactory.cpp  ImageParserFactory.h  ParseBMP.cpp  ParseBMP.h  ParseJPG.cpp  ParseJPG.h  ParsePNG.cpp  ParsePNG.h  main.cpp  testMain.cpp
ImageParsers/: ImageParser.cpp  ImageParser.h  ImageParserFactory.h  ParseBMP.cpp  ParseBMP.h  ParseJPG.cpp  ParseJPG.h  ParsePNG.cpp  ParsePNG.h
LodePNG/: LodePNG.cpp
NanoJPG/: nanojpeg.c  nanojpeg.h
